bitbybit-tests/tests/ui/range_attribute_multiple_ranges.stderr
error: custom attribute panicked
 --> tests/ui/range_attribute_multiple_ranges.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: `range` attribute for RangeVariant1 has more than one range; use `ranges`
